# LatticeLibrary

./: .gitattributes  .gitignore  .gitmodules  AAEdistancetransform.h  BCCveryhighdoubleband.bin.REMOVED.git-id  BCCveryhighresX.bin.REMOVED.git-id  BCCveryhighresY.bin.REMOVED.git-id  BCCveryhighresZ.bin.REMOVED.git-id  CCLattice.h  CMakeLists.txt  Doxyfile  FCCveryhighdoubleband.bin.REMOVED.git-id  README.md  antialiasedeuclideandistance.h  approximateminimumbarrierboundingboxdistance.h  approximateminimumbarrierdistance.h  arrayadjustment.h  arrayadjustmenttest.cpp  bcclattice.cpp  bcclattice.h  bcclatticetestareaapproximation.cpp  bcclatticetestcoordinates.cpp  bcclatticetestinitialization.cpp  bcclatticetestneighbors.cpp  binarycimage.cpp  binarycimage.h  binaryimage.cpp  binaryimage.h  cclattice.cpp  cclattice.h  cclatticetestareaapproximation.cpp  cclatticetestcoordinates.cpp  cclatticetestinitialization.cpp  cclatticetestneighbors.cpp  cimage.h  cimageBCC.h  cimageCC.h  cimageFCC.h  cimagebcctestbands.cpp  cimagebcctestcoordinates.cpp  (+151 more)
old files/: padding.h
src/: CMakeLists.txt  antialiasedeuclideandistance.h  bcclattice.cpp  cclattice.cpp  cclattice.h  defs.h  distancetoballcenter.h  distancetransform.h  fcclattice.cpp  filtercoefficient.h  fouriertransform.h  fuzzyconnectedness.h  intensityworkset.h  interpolation.h  lineardistancetocenter.h  linearinterpolation.h  main.cpp  medianvaluefinder.h  minimumbarrierdistance.h  modalitymerge.h  mrisegmentation.cpp  mrisegmentationhighres.cpp  neighbor.h  norm.h  objectvolume.h  pnorm.h  priorityqueue.h  productnorm.h  seed.h  seededdistancemeasure.h  seededdistancetransform.h  sequencefilter.h  structuringelement.h  uniformweight.h  vectoroperators.h  vectorvaluefinder.h
test/: bcclatticetestareaapproximation.cpp  bcclatticetestcoordinates.cpp  bcclatticetestinitialization.cpp  bcclatticetestneighbors.cpp  cclatticetestareaapproximation.cpp  cclatticetestcoordinates.cpp  cclatticetestinitialization.cpp  cclatticetestneighbors.cpp  dataredistributiontest.cpp  downsampletest.cpp  fcclatticetestareaapproximation.cpp  fcclatticetestcoordinates.cpp  fcclatticetestinitialization.cpp  fcclatticetestneighbors.cpp  filehandling.cpp  filetest.cpp  filtercoefficienttest.cpp  imagearithmetictest.cpp  imagetestbands.cpp  imagetestcoordinates.cpp  imagetestinitialization.cpp  imagetestmanipulation.cpp  imagetestneighbors.cpp  intensityworksettest.cpp  linearinterpolationtest.cpp  modalitymergetest.cpp  neighbortest.cpp  normtest.cpp  priorityqueuetest.cpp  seededdistancetransformtest.cpp  segmentationtest.cpp  sequencefiltertest.cpp  spatialtemplatetest.cpp  structuringelementtest.cpp  uniformweighttest.cpp  weightedaveragefiltertest.cpp
